# thinkaloudai-backend

./: .gitignore
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  API_REFERENCE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260221_1011_3802660f99b0_create_all_tables.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: ai.py  auth.py  problems.py  sessions.py  stats.py  users.py  voice.py
backend/app/core/: __init__.py  email.py  exceptions.py  logging_config.py  metrics.py  middleware.py  otp.py  security.py
backend/app/db/: db.py  redis.py
backend/app/models/: __init__.py  feedback.py  problem.py  session.py  streak.py  submission.py  user.py  user_progress.py
backend/app/schemas/: auth.py  problem.py  session.py  stats.py  user.py
backend/app/services/: code_runner.py  livekit_service.py  llm_service.py  test_runner.py
backend/nginx/: nginx.conf
backend/sandbox/: Dockerfile
backend/scripts/: seed.py
infra/: docker-compose.mi300x.yml  health.sh  livekit.yaml  logs.sh  restart.sh  setup-server.sh  thinkaloud.service
voice-agent/: Dockerfile  agent.py  requirements.txt
